<resources>
    <string name="app_name">Svg Viewer</string>
    <string name="app_fname">Svg Viewer - Svg Converter</string>
    <string name="app_main_text"><font color='#FFFFFF'>SVG</font> \n<font color='#F3D9B1'>Viewer</font> </string>

    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate us</string>
    <string name="feedback">Feedback</string>
    <string name="more_apps">More Apps</string>
    <string name="share">Share</string>

    <string name="view_svg_files">View svg files</string>
    <string name="view_svg_code">View svg code</string>
    <string name="svg_code">SVG Code</string>
    <string name="converted">Converted</string>
    <string name="view_converted_files">View converted files</string>
    <string name="file_name">File Name</string>
    <string name="file_size">File Size</string>
    <string name="text">Text</string>
    <string name="convert">Convert File</string>
    <string name="converted_files">Converted Files</string>
    <string name="recent_files">Recent Files</string>
    <string name="no_data_text">Currently no File available</string>
    <string name="currently_no_converted_files_available">Currently no converted files available</string>
    <string name="currently_no_svg_files_available">Currently no SVG files available</string>
    <string name="currently_no_recent_files_available">Currently no Recent files available</string>


    <string name="permissions_string">     All permissions are only for user\'s benefit please allow for proceed further.\n\n
    <b>Permissions:</b>
    \n\n1: " "Read Storage permissions.\n
    \n2: " "Write Storage permissions.\n

</string>
    <string name="do_you_want_to_see">Do you want to see?</string>
    <string name="code">Code</string>
    <string name="image">Image</string>
    <string name="convert_to_png">Convert to PNG</string>
    <string name="convert_to_pdf">Convert to PDF</string>
    <string name="convert_to_jpg">Convert to JPG</string>
    <string name="enter_file_name">Enter file Name</string>
    <string name="delete_from_recent">Delete from recent</string>
    <string name="search">Search…</string>
    <string name="text_pdf_preview_not_support">PDF Preview Is not supported on below android Lolipop</string>

    <string name="text_next">Next</string>
    <string name="text_generating_pdf">Generating PDF</string>
    <string name="text_next_page">Next Page</string>
    <string name="text_previous_page">Previous Page</string>
    <string name="pdf_page_as_image">pdf page as image</string>

    <string name="l_svg">Copyright 2013–2018 Paul LeBeau, Cave Rock Software Ltd</string>
    <string name="l_intuit">Copyright © 2013 – 2022 Intuit Inc.</string>
    <string name="l_codeview">Copyright (c) 2016-2017 Tiago Melo</string>
    <string name="apache">Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.You may obtain a copy of the License at\n\n

       <a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>\n\n

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="mit">Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="license">License - Copyright</string>

</resources>