<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_privacy"
        android:icon="@drawable/ic_privacy"
        android:title="@string/privacy_policy" />
    <item
        android:id="@+id/nav_license"
        android:icon="@drawable/ic_copyright"
        android:title="@string/license" />

    <item
        android:id="@+id/nav_rate_us"
        android:icon="@drawable/ic_rateus"
        android:title="@string/rate_us" />

    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share" />

    <item
        android:id="@+id/nav_feedback"
        android:icon="@drawable/ic_feedback"
        android:title="@string/feedback" />

    <item
        android:id="@+id/nav_moreapps"
        android:icon="@drawable/ic_more_app"
        android:title="@string/more_apps" />
</menu>