<?xml version="1.0" encoding="utf-8"?>
<com.infideap.drawerbehavior.Advance3DDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context="bin.viewer.reader.bin.file.opener.app.activities.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:background="@drawable/ic_main_back"
            >


        </RelativeLayout>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_Drawer"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/ic_drawer" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_85sdp"
            android:layout_height="@dimen/_85sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/ic_main_svg" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_Drawer"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_toEndOf="@id/iv_Drawer"
            android:fontFamily="@font/inter_bold"
            android:text="@string/app_main_text"
            android:id="@+id/txtv_bin"
            android:textSize="@dimen/_25sdp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txtv_bin"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/ic_main_front">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:orientation="vertical"

                android:weightSum="4">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="6"
                    android:id="@+id/layout_svgviewer"
                    android:foreground="?selectableItemBackground"
                    >

                    <androidx.appcompat.widget.AppCompatImageView
                        style="@style/imagestyle"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_svg_viewer" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/textviewstyle"
                            android:text="@string/app_name" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/textviewbelow"
                            android:text="@string/view_svg_files" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:src="@drawable/ic_forward" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/secondary"
                    />
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="6"
                    android:id="@+id/layout_svgcode"
                    android:foreground="?selectableItemBackground"
                    >

                    <androidx.appcompat.widget.AppCompatImageView
                        style="@style/imagestyle"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_svg_code" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/textviewstyle"
                            android:text="@string/svg_code" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/textviewbelow"
                            android:text="@string/view_svg_code" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:src="@drawable/ic_forward" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/secondary"
                    />


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="6"
                    android:id="@+id/layout_recent_files"
                    android:foreground="?selectableItemBackground"
                    >

                    <androidx.appcompat.widget.AppCompatImageView
                        style="@style/imagestyle"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_recent_file" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/textviewstyle"
                            android:text="Recent Files" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/textviewbelow"
                            android:text="View recent files" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:src="@drawable/ic_forward" />
                </androidx.appcompat.widget.LinearLayoutCompat>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/secondary"
                    />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="6"
                    android:id="@+id/layout_converted"
                    android:foreground="?selectableItemBackground"
                    >

                    <androidx.appcompat.widget.AppCompatImageView
                        style="@style/imagestyle"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_converted" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_weight="5"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/textviewstyle"
                            android:text="@string/converted_files"
                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/textviewbelow"
                            android:text="@string/view_converted_files" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:src="@drawable/ic_forward" />
                </androidx.appcompat.widget.LinearLayoutCompat>




            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>
    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:itemIconTint="@color/primary"
        app:itemTextColor="@color/black"
        app:menu="@menu/activity_main_drawer" />
</com.infideap.drawerbehavior.Advance3DDrawerLayout>